--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "body-parser": "^1.18.3",
     "consolidate": "^0.15.1",
     "express": "^4.16.4",
