--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "body-parser": "^1.18.3",
     "consolidate": "^0.15.1",
     "express": "^4.16.4",
-    "handlebars": "^4.0.12"
+    "handlebars": "^4.0.12",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.9"
   },
   "devDependencies": {
     "jade": "^1.11.0",
